--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.0",
+    "aws-amplify": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "aws-amplify": "^5.3.0",
-    "@aws-amplify/ui-react": "^5.3.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,5 +32,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^24.10.0",
+    "@types/react": "^17.0.89",
+    "@types/react-dom": "^17.0.26",
+    "typescript": "^5.9.3"
   }
 }
